# nix-templates

./: README.md  flake.nix
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  run.nu
cpp/.helix/: config.toml  languages.toml
